# opcua-wsdl

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  make_deb.sh
configs/: soap_client.conf  soap_server.conf
debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  manpage.1.ex  opcua-wsdl-client.install  opcua-wsdl-common.install  opcua-wsdl-server.install
src/: discovery_service.cpp  discovery_service.h  endpoint_service.cpp  endpoint_service.h  soap_addon.cpp  soap_client_addon.cpp  soap_service.h
src/serialization/: deserialize.cpp  serialize.cpp
tests/: browse.cpp  common.h
